# orsa-mirror

./: CMakeLists.txt  COPYRIGHT  DEVELOPERS  orsa.pri
app/: CMakeLists.txt
app/CometGrainsDynamics/: CometGrainsDynamics.app.pro  CometGrainsDynamics.cpp  CometGrainsDynamics.h  CometGrainsDynamics.pro  gaskell_mod.h  histo.app.pro  histo.cpp  histo.h  histo2fits.app.pro  histo2fits.cpp  histosize.h
app/DAWN/: DAWN.app.pro  DAWN.cpp  DAWN.h  compare.app.pro  compare.cpp  multiminPhase.cpp  postproc.app.pro
app/InsideVesta/: InsideVesta.app.pro  InsideVesta.cpp  InsideVesta.h  InsideVesta.pro
app/NEOtk/: AdaptiveInterval.h  NEOtk.app.pro  NEOtk.cpp  NEOtk.pro  SR.app.pro  SR.cpp  movingWindowRange.h  splitRange.h  testGUI.app.pro  testGUI.cpp  vestaViz.h
app/RendezvousWithVesta/: BuildCounter.h  CMakeLists.txt  RendezvousWithVesta.app.pro  RendezvousWithVesta.cpp  RendezvousWithVesta.h  gaskell.h  mainThread.cpp  mainThread.h  mp.app.pro  multiminPhase.cpp  plot.cpp  plot.h
app/RendezvousWithVesta/data/: README
app/ThermalStressCraters/: GenMake.app.pro  GenMakeMain.cpp  ThermalStressCraters.app.pro  ThermalStressCraters.cpp  ThermalStressCraters.h  ThermalStressCraters.pro
app/VestaInterior/: CCMD2SH.cpp  CCMD2SH.h  CCMD2ijk.h  CubicChebyshevMassDistribution.cpp  CubicChebyshevMassDistribution.h  DP.app.pro  DP.cpp  DR.app.pro  DR.cpp  FastLayers.app.pro  FastLayers.cpp  FastLayers.h  MD2G.app.pro  MD2G.cpp  MD2SH.app.pro  MD2SH.cpp  MovingLayers.app.pro  MovingLayers.cpp  MovingLayers.h  MovingLayers_multifit.h  SH2ijk.app.pro  SH2ijk.cpp  SH2ijk.h  ShapeToSH.app.pro  ShapeToSH.cpp  VestaInterior.app.pro  VestaInterior.cpp  VestaInterior.h  VestaInterior.pro  VestaInteriorAnalytic.app.pro  VestaInteriorAnalytic.cpp  VestaInteriorAnalytic.h  VestaInteriorAnalytic_EarlyMode.app.pro  VestaInteriorAnalytic_EarlyMode.cpp  VestaInteriorAnalytic_EarlyMode.h  VestaInteriorMonteCarlo.app.pro  VestaInteriorMonteCarlo.cpp  VestaInteriorMonteCarlo.h  VestaInteriorUnconstrained.app.pro  VestaInteriorUnconstrained.cpp  (+61 more)
app/boinc/SurveyReview/: DetectionEfficiencyFitMain.cpp  DetectionEfficiencyMain.cpp  DetectionEfficiencyPlotMain.cpp  ExtractObservationsMain.cpp  InspectMain.cpp  InspectMerge.app.pro  InspectMergeMain.cpp  InspectMergePlotMain.cpp  InspectPlotMain.cpp  ProcessObservations.app.pro  ProcessObservationsMain.cpp  SurveyReview.cpp  SurveyReview.h  SurveyReview.pro  SurveyReviewMain.cpp  SurveyReviewMergeMain.cpp  SurveyReviewMergeNEOs.app.pro  SurveyReviewMergeNEOsMain.cpp  SurveyReviewMultipleJobsSubmission.cpp  SurveyReviewWorkGenerator.app.pro  SurveyReviewWorkGenerator.cpp  binomial.h  eta.h  fit.h  skycoverage.cpp
src/: CMakeLists.txt  Doxyfile  src.pro
src/orsa/: CMakeLists.txt  angle.cpp  angle.h  body.cpp  body.h  bodygroup.cpp  bodygroup.h  box.cpp  box.h  cache.h  chebyshev.h  crash.cpp  datetime.h  debug.cpp  double.cpp  double.h  euler.cpp  euler.h  integrator.cpp  integrator.h  integrator_leapfrog.cpp  integrator_radau.cpp  integrator_radau.h  interaction.cpp  interaction.h  interval.h  legendre.cpp  legendre.h  massCluster.cpp  massCluster.h  massDistribution.h  matrix.cpp  matrix.h  multifit.cpp  multifit.h  multimin.cpp  multimin.h  orbit.cpp  orbit.h  orsa.common.pri  (+14 more)
src/orsaEssentialOSG/: CMakeLists.txt
src/orsaInputOutput/: CMakeLists.txt  JPL_comet.cpp  MPC.cpp  MPC.h  MPC_asteroid.cpp  MPC_asteroid.h  MPC_comet.cpp  MPC_observations.cpp  MPC_observations.h  RWO.cpp  file.h
src/orsaOSG/: AnimationTime.cpp  BodyAttitudeCallback.h  BodyTranslationCallback.h  CMakeLists.txt  CenterOfMassPositionCallback.h  LightSourceUpdateCallback.h  OrbitNodeCallback.h  Track.cpp  viz.cpp
src/orsaPDS/: CMakeLists.txt  RadioScienceGravity.cpp  RadioScienceGravity.h  orsaPDS.common.pri  orsaPDS.dynamiclib.pro  orsaPDS.pro  orsaPDS.staticlib.pro
src/orsaQt/: CMakeLists.txt  orsaQt.common.pri
src/orsaSPICE/: CMakeLists.txt  orsaSPICE.staticlib.pro  spice.cpp  spice.h  spiceBodyRotationalCallback.cpp  spiceBodyRotationalCallback.h  spiceBodyTranslationalCallback.cpp  spiceBodyTranslationalCallback.h
src/orsaSolarSystem/: CMakeLists.txt  attitude.cpp  attitude.h  data.h  datetime.cpp  datetime.h  gauss.cpp  observation.cpp  observation.h  observatory.h  orsaSolarSystem.common.pri
src/orsaUtil/: CMakeLists.txt  adaptiveInterval.h  adaptiveMonteCarlo.cpp  adaptiveMonteCarlo.h  multimin.cpp  multimin.h  observatory.cpp  orbit.cpp  orbit.h  orsaUtil.common.pri  statisticalRanging.cpp  statisticalRanging.h
